# leetcode-notes

./: .gitignore  Map1.emmx  main.cpp  math.emmx  readme.md  single_source_bfs.cpp  string.emmx
backup/: map.emmx
cpp_algo/: CMakeLists.txt  presum.cpp  vector_helper.h
cpp_algo/cpp_stl/: 2dvector.cpp  int_string.cpp  map_ex.cpp  string_ex.cpp  string_to_vector_ex.cpp  vector_ex.cpp
cpp_algo/dfs/00/: 104.maxumum_depth_of_binary_tree.cpp
cpp_algo/dp/: 53_MaximumSubarray.cpp
cpp_algo/foundation/graph/: 00.graph_bfs.cpp
cpp_algo/foundation/kmp/: kmp.md  kmp_algo.cpp
cpp_algo/foundation/quicksort/: 00_array_quicksort.cpp
cpp_algo/graph/: 00.graph.cpp
cpp_algo/include/: binarytree_helper.h  vector_helper.h
cpp_algo/leetcode/dfs/00/: 104.maxumum_depth_of_binary_tree.cpp
cpp_algo/leetcode/dp/: 53_MaximumSubarray.cpp
cpp_algo/leetcode/presum/: 560.SubarraySumEqualsK.cpp
cpp_algo/presum/: 01_560_subarray_sum_equals_k.cpp  560_subarray_sum_equals_k.cpp  presum.cpp
foundation/sliding-window/219.ContainsDuplicateII/: CMakeLists.txt  main.cpp
leetcode-cpp/: CMakeLists.txt  README.md
leetcode-cpp/algorithms/binary-search/: binary-search-02.cpp  binary-search-prototype.cpp
leetcode-cpp/algorithms/quicksort/: 00_array_quicksort.cpp
leetcode-cpp/doc/binary-search/: 00.binary-seasrch.md  binary-search-prototype.cpp  binary-search.cpp
leetcode-cpp/doc/fast-slow-pointers/: fast-slow-pointers.md
leetcode-cpp/doc/heap/: heap.md
leetcode-cpp/doc/kmp/: kmp_algo.cpp
leetcode-cpp/doc/quicksort/: 00_array_quicksort.cpp
leetcode-cpp/doc/topological-soft/: toplotical-sort.cpp
leetcode-cpp/doc/trie/: trie.md
leetcode-cpp/include/: binarytree_helper.h  common_inc.h  listnode.h  pq_helper.h  vector_helper.h
leetcode-cpp/leetcode/: 2201.count_artifacts_that_can_be_extracted.cpp  268.MissingNumber.cpp
leetcode-cpp/leetcode/00.foundation/backtracking/permutation-problems/: 46.Permutations.cpp
leetcode-cpp/leetcode/00.foundation/binary_search/blue-red-problems/: 744.find-smallest-letter-greater-than-target.cpp
leetcode-cpp/leetcode/00.foundation/binary_search/search-in-moutain/: 852.peak-index-in-a-moutain-array.cpp
leetcode-cpp/leetcode/00.foundation/binary_search/search-in-roteated-array/: 81.search-in-rotated-sorted-array-ii.cpp
leetcode-cpp/leetcode/00.foundation/dp/longest_subsequence_problems/: 673.number_of_longest_increasing_subsequence.cpp
leetcode-cpp/leetcode/00.foundation/fast-slow-pointers/: 141.linked-list-cycle.cpp  142.link-list-cycle-II.cpp
leetcode-cpp/leetcode/00.foundation/heap/: 215.find-kth-largest-element-in-an-array.cpp  373.find-k-pairs-with-smallest-sums.cpp  703.kth-largetst-element-in-a-stream.cpp
leetcode-cpp/leetcode/00.foundation/in-place-hash/: 442.in-place-hash-prototype.cpp
leetcode-cpp/leetcode/00.foundation/in-place-swap/: 448.find-all-numbers-disappeared-in-an-array.cpp
leetcode-cpp/leetcode/00.foundation/linked-list/dummy-head/: 203.remove-linked-list-elements.cpp  83.remvoe-duplicates-from-sorted-list.cpp
leetcode-cpp/leetcode/00.foundation/prefix-suffix-product/: suffix-product-prototype.cpp
leetcode-cpp/leetcode/00.foundation/two-pointers/linkedlist/: 206.reverse-linkedlist-two-pointers.cpp  234.palindrome-linked-list.cpp
leetcode-cpp/leetcode/01.foundation-algorithms/fast-slow-pointers/: 876.middle-of-the-linked-list.cpp
leetcode-cpp/leetcode/01.foundation-algorithms/toplogical-soft/: 207.course-schedule-dfs.cpp
leetcode-cpp/leetcode/01.practice/2d-array/: 2022.convert-1D-array-into-2D-array.cpp  73.set-matrix-zeros.cpp
leetcode-cpp/leetcode/01.practice/bit-manipulation/: 136.single-number.cpp
leetcode-cpp/leetcode/01.practice/range-1-to-n-find-duplicates/: 442.find-all-duplicates-in-an-array.cpp
leetcode-cpp/leetcode/03-advanced-question-I/islands-problems/: 827.making-a-large-island .cpp
leetcode-cpp/questions/: 128.longest_consecutive_sequence.cpp
leetcode-cpp/questions/0.patterns/backtracking/: 22.generate-parentheses.cpp  39.combination-sum.cpp
leetcode-cpp/questions/0.patterns/binary_search/: 00.binary-seasrch.md
leetcode-cpp/questions/0.patterns/pre-product/: pre-product-prototype.cpp
leetcode-cpp/questions/0.patterns/prefix-suffix-product/: 238.product-of-array-expect-self.cpp  prefix-product-prototype.cpp
leetcode-cpp/questions/0.patterns/presum/: presum.cpp
leetcode-cpp/questions/0.patterns/string/: 165.CompareVersionNumbers.cpp
leetcode-cpp/questions/0.patterns/union_find/prototype/: unionFind.cpp
leetcode-cpp/questions/01.question_types/array/: 217.contains-duplicate.cpp  219.contains-duplicate-II.cpp
leetcode-cpp/questions/binary_search/: 287.find-the-duplicate-number.cpp  33.search-in-rotated-sorted-array.cpp  74.search-a-2d-matrix.cpp  81.search-in-rotated-sorted-array-ii.cpp
leetcode-cpp/questions/dfs/dfs-subset-combination/: 78.Subsets_sln1.cpp  90.subset_II.cpp
leetcode-cpp/questions/dfs/prototype/: 104.maxumum_depth_of_binary_tree.cpp
leetcode-cpp/questions/dp/longest_subsequence_problems/: 300.longest_increasing_subsequence.cpp  longest_subsequence.md
leetcode-cpp/questions/graph/: 1042.flower_plating_with_no_adjacent.cpp
leetcode-cpp/questions/palindrome/: 680.valid-palindrome-ii.cpp
leetcode-cpp/questions/presum/: presum.cpp
leetcode-cpp/skills/: int_string.cpp  map_ex.cpp  odevity_ex.cpp  stl_set.cpp  string_to_vector_ex.cpp
leetcode_cpp/: CMakeLists.txt
leetcode_cpp/algorithms/binary-search/: binary_search_prototype.cpp
leetcode_cpp/foundation/graph/: 00.graph_bfs.cpp
leetcode_cpp/foundation/kmp/: kmp_algo.cpp
leetcode_cpp/foundation/quicksort/: 00_array_quicksort.cpp
leetcode_cpp/leetcode/: 2201.CountArtifactsThatCanBeExtracted.cpp
leetcode_cpp/leetcode/binary_search/: 33.search_in_rotated_sorted_array.cpp
leetcode_cpp/leetcode/dp/: 53_MaximumSubarray.cpp
leetcode_cpp/leetcode/presum/: 560.SubarraySumEqualsK.cpp
leetcode_cpp/leetcode/string/: 165.CompareVersionNumbers.cpp
leetcode_cpp/questions/binary_search/: 81.search-in-rotated-sorted-array-ii.cpp
leetcode_cpp/skills/: odevity_ex.cpp  string_to_vector_ex.cpp
(+194 files in other folders)
